<resources>
    <string name="app_name">礼煜明德办公系统</string>
    <string name="app_title">礼煜明德办公系统</string>
    <string name="app_introduce">仁者爱人、义利并举、崇德向善、尊道贵德</string>
    <string name="user">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="app_version">V1.0_20190105</string>
    <string name="change_pw">修改密码</string>

    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="hint">提示</string>

    <string name="login_activity_input_username_toast">用户名不能为空</string>
    <string name="login_activity_input_password_toast">密码不能为空</string>
    <string name="login_activity_input_password_error_toast">密码位数应为6位至20位</string>
    <string name="login_activity_logining_toast">正在登陆...</string>
    <string name="login_error">登陆失败</string>

    <string name="login_activity_setting_toast">请先进行系统配置</string>
    <string name="login_activity_loginfail_sever_toast">访问服务器异常</string>
    <string name="login_activity_loginfail_network">当前网络不可用，请检查您的网络设置</string>


    <string name="login_activity_loading_null">数据为空</string>
    <string name="login_activity_loginfail_toast">访问服务器异常</string>
    <string name="login_activity_loading_fail_toast">数据获取失败</string>
    <string name="task_reply_fail_toast">任务回复失败</string>
    <string name="update_pw_fail">更新密码失败</string>


    <string name="null_title">标题不能为空</string>
    <string name="null_cusname">客户姓名不能为空</string>
    <string name="null_content">内容不能为空</string>
    <string name="null_receUserIds">接收人不能为空</string>

</resources>
