<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/pop_single_selector"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black_text"
                android:textSize="20sp"
                android:text="@string/hint"/>
            <TextView
                android:paddingTop="15dp"
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="18sp"
                android:text="@string/hint"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel"
                style="@style/txt_camera_pop_menu"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/pop_single_selector"
                android:textColor="@color/colorPrimary"
                android:text="@string/cancel"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/txt_camera_pop_menu"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/check_select"
                android:textColor="#ffffff"
                android:text="@string/ok"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>