<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:adjustViewBounds="true"
    android:scaleType="fitXY"
    tools:context="com.example.sxd.thanksgivinghall.login.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/logo"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:text="@string/app_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white_text"
            android:text="@string/app_introduce"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/nocolor"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black_text"
                android:layout_gravity="left"
                android:gravity="center"
                android:textSize="16sp"
                android:text="用户名"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divide_line"/>
            <EditText
                android:id="@+id/logon_et_username"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:hint="@string/user"
                android:singleLine="true"
                android:background="@null"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/nocolor"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/black_text"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="密码"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divide_line"/>
            <EditText
                android:id="@+id/logon_et_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:textSize="16sp"
                android:background="@null"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/logon_bt_logon"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:text="登录"
                android:textSize="18dp"
                android:background="@drawable/check_select"
                android:textColor="@color/white_text" />

            <TextView
                android:id="@+id/setting"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="系统配置"/>
        </LinearLayout>

        <RelativeLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/app_version"
                android:layout_centerHorizontal="true"
                android:textColor="@color/btn_bottom_tv_gray" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>

</LinearLayout>